<resources>
    <string name="app_name">AppRestfullNet</string>

    <string-array name="conversion_options">
        <item>Pulgadas a centímetros</item>
        <item>Centímetros a pulgadas</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_welcome_text">INICIAR SESIÓN</string>
</resources>
