<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/monster2"
    tools:context="vista.MainActivity">


    <!-- Texto de bienvenida o descripción -->
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/login_welcome_text"
        android:textSize="30sp"
        android:background="@color/main_color"
        android:textColor="@color/main_color_back"
        android:textAlignment="center"
        android:textStyle="bold" />

    <!-- Campo de usuario -->
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        android:background="@drawable/button_style"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        android:background="@drawable/button_style"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/main_color_back"
        android:text="@string/action_sign_in" />

    <!-- Indicador de carga -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:visibility="gone" />

</LinearLayout>